fix: align ATK number to bottom of card meta row

--- a/src/UmeBattle/components/SelectScreen.less
+++ b/src/UmeBattle/components/SelectScreen.less
@@ -172,7 +172,7 @@
 
   &__card-meta {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
   }
 
